@@ -6,6 +6,8 @@
    - djm@cvs.openbsd.org 2010/03/04 20:35:08
      [ssh-keygen.1 ssh-keygen.c]
      Add a -L flag to print the contents of a certificate; ok markus@
+ - (tim) [ssh-pkcs11.c] Fix "non-constant initializer" errors in older
+   compilers. OK djm@
 
 20100304
  - (djm) [ssh-keygen.c] Use correct local variable, instead of
